--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Chilanka&family=Dancing+Script:wg00&family=Pacifico&family=Permanent+Marker&family=Piedra&family=Playball&family=Playfair+Display:wght@500&family=Sansita+Swashed:wght@400;600&display=swap');
 
 body {
-    background-color:orange;
+    background-color: orange;
     font-size: 20px;
 }
 
@@ -25,11 +25,14 @@ body {
 
 .navbar-nav li a:hover {
     background-color: green;
-    text-decoration: underline;
+    border-radius: 4px;
+    font-size: 26px;
+    
 }
 
 .navbar .current {
     background-color: red;
+    border-radius: 2px;
 }
 
 /* navbar ends */
@@ -38,7 +41,7 @@ h1 {
     color: rgb(3, 80, 3);
     text-align: center;
     font-family: 'Playball',
-    cursive;
+        cursive;
     font-size: 50px;
     font-weight: bolder;
     text-shadow: 4px 4px 5px rgb(7, 245, 7);
@@ -51,8 +54,8 @@ h1 {
     padding: 25px;
     max-width: 1300px;
     font-family: "Trebuchet MS",
-    Helvetica,
-    sans-serif;
+        Helvetica,
+        sans-serif;
 }
 
 #para p a {
@@ -66,24 +69,25 @@ h2 {
     margin-left: 20px;
 }
 
-section ul li{
+section ul li {
     font-family: "Trebuchet MS",
-    Helvetica,
-    sans-serif;
+        Helvetica,
+        sans-serif;
 }
 
 /* carousel starts */
 .carousel-inner img {
     width: 100%;
     height: 100%;
+    padding: 10px 10px;
 }
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
-    width: 40px;
+    width: 30px;
     height: 40px;
-    background-color: rgb(233, 13, 185);
-    border-radius: 50%;
+    background-color: red;
+    border-radius: 10%;
     border: 2px solid white;
 }
 
@@ -91,7 +95,7 @@ section ul li{
     height: 10px;
     width: 10px;
     background-color: transparent;
-    border: 2px solid cyan;
+    border: 2px solid orangered;
     border-radius: 50%;
 }
 
@@ -136,7 +140,7 @@ section ul li{
     font-size: 20px;
     font-weight: bolder;
     font-family: 'Bubblegum Sans',
-    cursive;
+        cursive;
 }
 
 .card-body a {
@@ -149,8 +153,8 @@ section ul li{
     padding: 5px;
     border-width: 2px;
     font-family: "Comic Sans MS",
-    cursive,
-    sans-serif;
+        cursive,
+        sans-serif;
 }
 
 /* card ends */
@@ -164,8 +168,8 @@ section ul li{
     opacity: 0.9;
     color: white;
     font-family: "Comic Sans MS",
-    cursive,
-    sans-serif;
+        cursive,
+        sans-serif;
 }
 
 #hours {
@@ -219,7 +223,7 @@ section ul li{
     #para {
         height: 400px;
         overflow: auto;
-        scrollbar-color:rgb(26, 91, 212) black;
+        scrollbar-color: rgb(26, 91, 212) black;
         scrollbar-width: thin;
     }
 
@@ -238,18 +242,26 @@ section ul li{
         box-shadow: inset 2px 2px 2px rgba(255, 255, 255, 0.25);
     }
 
+    .carousel-control-prev-icon {
+        margin-left: 30px;
+    }
+
+    .carousel-control-next-icon {
+        margin-right: 30px;
+    }
+
 }
 
 /********** Extra small devices only **********/
 @media (max-width: 767px) {
-    #para{
+    #para {
         height: 400px;
         overflow: auto;
-        scrollbar-color:rgb(26, 91, 212) black;
+        scrollbar-color: rgb(26, 91, 212) black;
         scrollbar-width: thin;
     }
 
-    #para::-webkit-scrollbar{
+    #para::-webkit-scrollbar {
         width: 8px;
     }
 
@@ -258,19 +270,24 @@ section ul li{
         border-radius: 8px;
     }
 
-    #para::-webkit-scrollbar-thumb{
+    #para::-webkit-scrollbar-thumb {
         border-radius: 30px;
-        background: linear-gradient(rgb(26, 91, 212),cyan);
+        background: linear-gradient(rgb(26, 91, 212), cyan);
         box-shadow: inset 2px 2px 2px rgba(255, 255, 255, 0.25);
+    }
+
+    .carousel-control-prev-icon {
+        margin-left: 40px;
+    }
+
+    .carousel-control-next-icon {
+        margin-right: 40px;
     }
 
     .carousel-control-prev-icon,
     .carousel-control-next-icon {
         width: 20px;
         height: 20px;
-        background-color: rgb(233, 13, 185);
-        border-radius: 50%;
-        border: 2px solid white;
     }
 
     .card-body {
@@ -278,7 +295,7 @@ section ul li{
         position: relative;
         color: white;
         font-family: 'Bubblegum Sans',
-        cursive;
+            cursive;
     }
 
     .card-body .card-title {
@@ -307,7 +324,7 @@ section ul li{
     #para {
         height: 400px;
         overflow: auto;
-        scrollbar-color:rgb(26, 91, 212) black;
+        scrollbar-color: rgb(26, 91, 212) black;
         scrollbar-width: thin;
     }
 
@@ -326,20 +343,25 @@ section ul li{
         box-shadow: inset 2px 2px 2px rgba(255, 255, 255, 0.25);
     }
 
+    .carousel-control-prev-icon {
+        margin-left: 40px;
+    }
+
+    .carousel-control-next-icon {
+        margin-right: 40px;
+    }
+
     .carousel-control-prev-icon,
     .carousel-control-next-icon {
         width: 12px;
         height: 12px;
-        background-color: rgb(233, 13, 185);
-        border-radius: 50%;
-        border: 2px solid white;
     }
 
     .carousel-indicators li {
         height: 5px;
         width: 5px;
         background-color: transparent;
-        border: 2px solid cyan;
+        border: 2px solid orangered;
         border-radius: 50%;
     }
 
@@ -351,5 +373,18 @@ section ul li{
 
     #rooms i {
         color: rgb(5, 119, 53);
+    }
+}
+
+@media (max-width: 375px) {
+    #rooms {
+        color: rgb(21, 6, 88);
+        text-decoration: underline;
+        text-shadow: 2px 2px 5px red;
+    }
+
+    #rooms i {
+        color: rgb(5, 119, 53);
+        font-size: 40px;
     }
 }
