--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@ section ul li {
     max-width: 350px;
     height: 300px;
     border: 2px solid rgb(219, 34, 34);
-    opacity: 0.9;
+    filter: grayscale(0.3) brightness(0.9);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -126,10 +126,11 @@ section ul li {
 }
 
 .card:hover {
-    opacity: 1;
+    filter: grayscale(0);
     border: 4px solid rgb(224, 47, 47);
     box-shadow: 8px 8px 20px rgba(230, 24, 219, 0.5);
     transform: translateY(15px);
+    
 }
 
 .card-body {
