--- a/registration/css/registrationstyle.css
+++ b/registration/css/registrationstyle.css
@@ -50,7 +50,7 @@ form {
     padding: 10px;
     border-radius: 10px;
     position: relative;
-    background: #ece6db;
+    background: linear-gradient(white, cyan);
     opacity: 0.9;
     font-family: cursive;
     box-shadow: 2px 2px 5px rgb(40, 150, 7);
