--- a/registration/css/registrationstyle.css
+++ b/registration/css/registrationstyle.css
@@ -50,14 +50,14 @@ form {
     padding: 10px;
     border-radius: 10px;
     position: relative;
-    background: linear-gradient(white, cyan);
+    background: linear-gradient(cyan, white);
     opacity: 0.9;
     font-family: cursive;
     box-shadow: 2px 2px 5px rgb(40, 150, 7);
 }
 
 form:hover {
-    box-shadow: 4px 5px 10px rgb(8, 241, 47);
+    box-shadow: 4px 5px 10px cyan;
 }
 
 label {
