--- a/registration/css/registrationstyle.css
+++ b/registration/css/registrationstyle.css
@@ -53,7 +53,7 @@ form {
     background: linear-gradient(cyan, white);
     opacity: 0.9;
     font-family: cursive;
-    box-shadow: 2px 2px 5px rgb(40, 150, 7);
+    /* box-shadow: 2px 2px 5px rgb(40, 150, 7); */
 }
 
 form:hover {
