--- a/registration/css/registrationstyle.css
+++ b/registration/css/registrationstyle.css
@@ -23,14 +23,14 @@ body {
 }
 
 .navbar-nav li a:hover {
-    background-color: green;
+    background: linear-gradient(green, black);
     border-radius: 4px;
     font-size: 26px;
     
 }
 
 .navbar .current {
-    background-color: red;
+    background: linear-gradient(black, red);
     border-radius: 2px;
 }
 
@@ -46,7 +46,8 @@ h2 {
 form {
     margin: auto;
     max-width: 370px;
-    border: 3px solid #37c294;
+    /* border: 3px solid #37c294; */
+    border: 2px solid purple;
     padding: 10px;
     border-radius: 10px;
     position: relative;
@@ -58,6 +59,7 @@ form {
 
 form:hover {
     box-shadow: 4px 5px 10px cyan;
+    border: none;
 }
 
 label {
