--- a/css/style.css
+++ b/css/style.css
@@ -201,6 +201,24 @@ section ul li {
 
 /* footer ends */
 
+.gotopbtn {
+    position: fixed;
+    width: 50px;
+    height: 50px;
+    background: rgba(0, 0, 0, 0.6);
+    bottom: 40px;
+    right: 50px;
+    text-decoration: none;
+    text-align: center;
+    line-height: 50px;
+    color: white;
+    font-size: 22px;
+}
+
+.gotopbtn:hover {
+    background: #27ae60;
+}
+
 /********** Large devices only **********/
 @media (min-width: 1200px) {
     .card-body a:hover {
@@ -385,6 +403,14 @@ section ul li {
     .card:hover{
         transform: none;
     }
+    
+    .gotopbtn {
+        width: 25px;
+        height: 25px;
+        bottom: 10px;
+        right: 10px;
+        line-height: 20px;
+    }
 }
 
 @media (max-width: 375px) {
@@ -401,5 +427,14 @@ section ul li {
     
     .card:hover{
         transform: none;
+    }
+    
+    .gotopbtn {
+        width: 25px;
+        height: 25px;
+        bottom: 10px;
+        right: 10px;
+        line-height: 20px;
+        font-size: 16px;
     }
 }
