--- a/css/style.css
+++ b/css/style.css
@@ -181,6 +181,9 @@ section ul li {
     font-family: "Comic Sans MS",
         cursive,
         sans-serif;
+    font-family: Tahoma,
+        Geneva,
+        sans-serif;
 }
 
 #hours {
