--- a/aboutus/css/about.css
+++ b/aboutus/css/about.css
@@ -72,6 +72,9 @@ body {
     font-family: "Comic Sans MS",
         cursive,
         sans-serif;
+    font-family: Tahoma,
+        Geneva,
+        sans-serif;
 }
 
 #hours {
