--- a/gallery/css/gallery.css
+++ b/gallery/css/gallery.css
@@ -79,6 +79,9 @@ h1{
     font-family: "Comic Sans MS",
         cursive,
         sans-serif;
+    font-family: Tahoma,
+        Geneva,
+        sans-serif;
 }
 
 #hours {
