--- a/registration/css/registrationstyle.css
+++ b/registration/css/registrationstyle.css
@@ -131,6 +131,9 @@ button[type=submit]:hover {
     font-family: "Comic Sans MS",
         cursive,
         sans-serif;
+    font-family: Tahoma,
+        Geneva,
+        sans-serif;
 }
 
 #hours {
