--- a/rooms/css/roomstyle.css
+++ b/rooms/css/roomstyle.css
@@ -81,6 +81,9 @@ body {
     font-family: "Comic Sans MS",
     cursive,
     sans-serif;
+    font-family: Tahoma,
+        Geneva,
+        sans-serif;
 }
 
 #hours {
