--- a/registration/css/registrationstyle.css
+++ b/registration/css/registrationstyle.css
@@ -118,6 +118,12 @@ button[type=submit]:hover {
     border-radius: 7px;
 }
 
+.modal-content {
+    color: black;
+    font-family: Georgia,
+        serif;
+}
+
 /* form ends */
 
 /* footer starts */
