--- a/contactus/contact.css
+++ b/contactus/contact.css
@@ -134,7 +134,6 @@ body {
 .wrapper1 div:nth-child(1):hover i {
     background: #4267B2;
     color: white;
-    box-shadow: 5px 0px 5px rgb(134, 133, 133);
     transform: scale(1.2);
     transition: 0.5s ease-in-out;
 }
@@ -142,7 +141,6 @@ body {
 .wrapper1 div:nth-child(2):hover i {
     background: #1DA1F2;
     color: white;
-    box-shadow: 5px 0px 5px rgb(134, 133, 133);
     transform: scale(1.2);
     transition: 0.5s ease-in-out;
 }
@@ -150,15 +148,13 @@ body {
 .wrapper1 div:nth-child(3):hover i {
     background: #E1306C;
     color: white;
-    box-shadow: 5px 0px 5px rgb(134, 133, 133);
     transform: scale(1.2);
     transition: 0.5s ease-in-out;
 }
 
 .wrapper1 div:nth-child(4):hover i {
-    background: #063857;
+    background: #0a5888;
     color: white;
-    box-shadow: 5px 0px 5px rgb(134, 133, 133);
     transform: scale(1.2);
     transition: 0.5s ease-in-out;
 }
@@ -166,7 +162,6 @@ body {
 .wrapper1 div:nth-child(5):hover i {
     background: #ff0000;
     color: white;
-    box-shadow: 5px 0px 5px rgb(134, 133, 133);
     transform: scale(1.2);
     transition: 0.5s ease-in-out;
 }
