--- a/contactus/contact.css
+++ b/contactus/contact.css
@@ -134,6 +134,7 @@ body {
 .wrapper1 div:nth-child(1):hover i {
     background: #4267B2;
     color: white;
+    box-shadow: none;
     transform: scale(1.2);
     transition: 0.5s ease-in-out;
 }
@@ -141,6 +142,7 @@ body {
 .wrapper1 div:nth-child(2):hover i {
     background: #1DA1F2;
     color: white;
+    box-shadow: none;
     transform: scale(1.2);
     transition: 0.5s ease-in-out;
 }
@@ -148,6 +150,7 @@ body {
 .wrapper1 div:nth-child(3):hover i {
     background: #E1306C;
     color: white;
+    box-shadow: none;
     transform: scale(1.2);
     transition: 0.5s ease-in-out;
 }
@@ -155,6 +158,7 @@ body {
 .wrapper1 div:nth-child(4):hover i {
     background: #0a5888;
     color: white;
+    box-shadow: none;
     transform: scale(1.2);
     transition: 0.5s ease-in-out;
 }
@@ -162,6 +166,7 @@ body {
 .wrapper1 div:nth-child(5):hover i {
     background: #ff0000;
     color: white;
+    box-shadow: none;
     transform: scale(1.2);
     transition: 0.5s ease-in-out;
 }
