--- a/rooms/css/roomstyle.css
+++ b/rooms/css/roomstyle.css
@@ -62,6 +62,7 @@ body {
     font-size: 14px;
     border: 2px solid brown;
     border-radius: 10px;
+    outline: none;
 }
 
 .catacombs button:hover{
