--- a/registration/css/registrationstyle.css
+++ b/registration/css/registrationstyle.css
@@ -82,6 +82,7 @@ input[type=email] {
     border: 3px solid rgb(14, 228, 68);
     border-radius: 8px;
     transition: width 0.4s ease-in-out;
+    outline: none;
 }
 
 input[type=text]:focus,
@@ -109,6 +110,7 @@ button[type=submit] {
     margin: 4px 2px;
     margin-left: 20px;
     cursor: pointer;
+    outline: none;
 }
 
 button[type=submit]:hover {
