--- a/contactus/contact.css
+++ b/contactus/contact.css
@@ -60,6 +60,7 @@ body {
     border-radius: 10px;
     width: 100%;
     padding: 5px;
+    outline: none;
 }
 
 .wrapper .input_field input[type="text"]:focus,
@@ -79,6 +80,7 @@ body {
     letter-spacing: 5px;
     font-weight: bold;
     cursor: pointer;
+    outline: none;
 }
 
 .btn:hover {
