Added smooth scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Chilanka&family=Dancing+Script:wght@700&family=Pacifico&family=Permanent+Marker&family=Piedra&family=Playball&family=Playfair+Display:wght@500&family=Sansita+Swashed:wght@400;600&display=swap');
 
+
+html {
+  scroll-behavior: smooth;
+}
 body {
     background-color: orange;
     font-size: 20px;
