--- a/aboutus/css/about.css
+++ b/aboutus/css/about.css
@@ -1,5 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Texturina:ital,wght@0,300;1,300&display=swap');
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
     background-image: url('beautiful_sunset.jpg');
     background-repeat: no-repeat;
