--- a/contactus/contact.css
+++ b/contactus/contact.css
@@ -1,3 +1,7 @@
+html {
+  scroll-behavior: smooth;
+}
+
 body {
     background: linear-gradient(white, rgb(14, 228, 96));
     background: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
